src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  width: 75%;
  margin: 2.5em auto 0 auto;
}

header h1 {
  margin: 0 0 3%;
  text-align: center;
  font-size: 3.5em;
}

form > * {
  margin: 0 5px;
}

select {
  height: 2em;
}

input[type="text"] {
  height: 1.7em;
  padding: 0px 5px;
}

button[type="submit"] {
  height: 2em;
}

.searchForm {
  height: 75vh;
  margin: 0 0 2em 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: 1s ease 0s;
}

.searchForm.minimized { height: 15vh }

.results {
  transition: 1s ease 0s;
  opacity: 1;
}

.results.hidden {
  opacity: 0;
  height: 0;
}

.clearSearch {
  float: right;
  background-color: transparent;
  border: 0;
  color: red;
  cursor: pointer;
}

.loaderMsg {
  text-align: center;
  color: purple;
  animation: loader infinite .5s linear;
}

.errMsg {
  text-align: center;
  color: red;
}

@keyframes loader {
  from {
    color: blue;
  }
  to {
    color: white;
  }
}

